# sdl3-wrapper

./: CMakeLists.txt  Force.cpp  Force.h  README.md  circulo.cpp  circulo.h  constantes.h  game.cpp  game.h  gameobject.cpp  gameobject.h  main.cpp  movement.cpp  movement.h  texturemanager.cpp  texturemanager.h
